added header section

--- a/images/index.html
+++ b/images/index.html
@@ -4,12 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=EB+Garamond&family=Lato:ital@1&family=Manrope&family=Open+Sans:ital,wght@1,500&family=Poppins:wght@400;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <header>
-        <nav>
-            
+    <header class="header-container">
+        <nav class="nav-title">
+            <div class="nav-container">
+                <h1 class="header">Ma<span class="color">r</span>y</h1>
+            </div>
+            <div>
+                <ul class="menus">
+                    <li>Portfolio</li>
+                    <li>Blogs</li>
+                    <li><button class="btn-primary">Hire Me</button></li>
+                </ul>
+            </div>
         </nav>
+        <section class="header-section">
+            <div>
+                <h4>Hi, I  am</h4>
+                <h1>Mary Hardy</h1>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+            </div>
+            <div>
+                <button>Download CV</button>
+                <button>Contact</button>
+            </div>
+            <div>
+                <img class="header-img" src="./hardy.png" alt="">
+            </div>
+        </section>
     </header>
     <main>  
 
