--- a/images/index.html
+++ b/images/index.html
@@ -38,7 +38,28 @@
             </div>
             </header>
     <main>  
-
+        <section class="about">
+            <h3 class="section-title">About me</h3>
+            <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde tempore voluptatem, rerum explicabo, ad placeat temporibus hic similique, facilis dicta eos quia tenetur quod doloribus quaerat atque voluptatibus illo molestias.</p>
+            <div class="about-info-container">
+                <div class="about-info">
+                    <h4 class="info-title">Name</h4>
+                    <p class="info-description">Mary Hardy</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">Email</h4>
+                    <p class="info-description">info@gmail.com</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">Date of birth</h4>
+                    <p class="info-description">11 November</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">From</h4>
+                    <p class="info-description">Chittagong,BD</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
