--- a/images/index.html
+++ b/images/index.html
@@ -60,6 +60,38 @@
                 </div>
             </div>
         </section>
+        <section>
+            <h3 class="section-title">What I do</h3>
+            <p id="what-i-do-description" class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, labore sapiente excepturi eligendi culpa perspiciatis nihil, nulla placeat odio blanditiis reprehenderit fuga earum soluta quaerat? Quos libero cum odio rem.</p>
+            <div class="skills-container">
+                <div class="skills">
+                    <img src="icons/js.png" alt="">
+                    <h3 class="skill-title">vanila Javascript</h3>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, asperiores!
+                    </p>
+                </div>
+                <div class="skills">
+                    <img src="icons/react.png" alt="">
+                    <h3 class="skill-title">React</h3>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, eligendi!</p>
+                </div>
+                <div class="skills">
+                    <img src="icons/mongo.png" alt="">
+                    <h3 class="skill-title">Mongo</h3>
+                    <p class="skill-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, enim?</p>
+                </div>
+                <div class="skills">
+                    <img src="icons/nodejs.png" alt="">
+                    <h3 class="skill-title">node js</h3>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, consequuntur.</p>
+                </div>
+            </div>
+        </section>
+        <section>
+            <h3 class="section-title">
+                
+            </h3>
+        </section>
     </main>
     <footer>
 
