--- a/images/index.html
+++ b/images/index.html
@@ -148,7 +148,29 @@
         </section>
     </main>
     <footer>
-
+            <div class="footer-colum">
+               <div class="footer-left">
+                <h3 class="section-title">Lets Connect Us</h3>
+                <p class="section-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+                <social class="link">
+                    <a href=""><img src="icons/facebook.png" alt=""></a>
+                    <a href=""><img src="icons/twitter.png" alt=""></a>
+                    <a href=""><img src="icons/insta.png" alt=""></a>
+                </social>
+               </div>
+               
+            </div>
+            <div class="footer-colum">
+                <div class="footer-right">
+                    <h3 class="section-title">Let’s Message me</h3>
+                    <form class="contact-form" action="">
+                        <input type="text" name="" placeholder="Your name" id="">
+                        <input type="email" name="" id="" placeholder="Your email">
+                        <textarea name="" placeholder="Message" id="" cols="30" rows="10"></textarea>
+                        <input class="btn-primary" type="submit" value="Submit">
+                    </form>
+                   </div>
+            </div>
     </footer>
 </body>
 </html>
